fix/update-high-contrast-black-white-colors

--- a/src/components/StatusReport/StatusReport.module.scss
+++ b/src/components/StatusReport/StatusReport.module.scss
@@ -5,7 +5,7 @@
   padding: 12px;
   background: theme.$grey00;
   border-radius: 6px;
-  border: 1px solid theme.$grey02;
+  border: 1px solid theme.$grey03;
   max-width: 500px;
   width: 100%;
   align-self: center;
