--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -98,18 +98,18 @@
   --tertiary: #ff00ff;
   --grey00: #ffffff;
   --grey01: #ffffff;
-  --grey02: #ffffff;
-  --grey03: #ffffff;
-  --grey04: #ffffff;
-  --grey05: #ffffff;
-  --grey06: #ffffff;
-  --grey07: #ffffff;
-  --grey08: #ffffff;
-  --grey09: #ffffff;
-  --grey10: #ffffff;
+  --grey02: #c2c2c2;
+  --grey03: #000000;
+  --grey04: #000000;
+  --grey05: #000000;
+  --grey06: #000000;
+  --grey07: #000000;
+  --grey08: #000000;
+  --grey09: #000000;
+  --grey10: #000000;
   --error: #ff0000;
   --background: #000000;
-  --text: #ffffff;
+  --text: #000000;
   --helpText: #000000;
 }
 
